--- a/sources/Styles.css
+++ b/sources/Styles.css
@@ -1,12 +1,54 @@
+header{
+    background-color: #FFE01B;
+    padding: 10px;
+    color: #241c15;
+    font-size: 54px;
+}
 body{    
     font-family: 'Gentium Basic', serif;
     font-style: normal;
     color: #403b3b;
+    font-size: 16px;
 }
-header{
-    background-color: #FFE01B;
+table{
+    border: #dbd9d2;
+    border-bottom-color: #004E56;
+}
+tr{
+    margin: 15px;
+}
+td{
+    align-self: initial;
+    margin: 25px;
+    padding: 5px;
+    vertical-align: top;
+}
+p{
+    padding: 5px;
+    margin: 5px;
+}
+sup{
+    font-size: 20px;
 }
 #boton{
     color: aliceblue;
     text-align: center;
+    background-color: #004E56;
 }
+#precio{    
+    font-size: 52px;
+    color: #241c15;
+}
+.link{
+    color:aliceblue;
+    text-decoration: none;
+}
+#titulo-plan{
+    font-size: 32px;
+}
+#lista{
+    border-bottom: dashed #007c89;
+    padding-bottom: 10px;
+    font-family: 'FontAwesome';
+}
+
