--- a/sources/Styles.css
+++ b/sources/Styles.css
@@ -46,9 +46,8 @@ sup{
 #titulo-plan{
     font-size: 32px;
 }
-#lista{
+li{
     border-bottom: dashed #007c89;
-    padding-bottom: 10px;
-    font-family: 'FontAwesome';
+    list-style-image: url(https://upload.wikimedia.org/wikipedia/commons/5/59/Feedbin-Icon-check.svg);    
 }
 
