--- a/googleclone/sources/styles.css
+++ b/googleclone/sources/styles.css
@@ -2,37 +2,91 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    text-decoration: none;
+    color: black;
 }
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 13px;
+
+}
+
+div{
+    width: 100%;
 }
 
 .nav-container ul, li{
-    display:flex;
+    display: flex;    
     list-style: none;
-    padding: 8px;
+    padding: 8px;    
+    align-items: center;
+    flex-direction: row;
     float: right;
 }
+
 img.redimension-menu{
     width: 20px;
     height: 20px;
 }
 
+.img-profile{
+    size: 25px;
+    border-radius: 50%;
+}
+
 .seccion-logo{
     display: flex;
-    margin: 0px auto;
+    padding-top: 15%;
 }
 .logo{
-    width: 200px;
+    width: 250px;
+    margin: 0px auto;
 }
-.busqueda{
+.div-busqueda{
     display: flex;
+    padding-top: 25px;
+    padding-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    background-image: url("/images/search-icon.png");
+    background-repeat: no-repeat;
+    background-position: 4px center;
+    background-size: 20px;
+}
 
+.buscador{
+    border: 1px;
+    box-shadow: 1px 1px 5px black;
+    border-radius: 25px;
+    padding: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 40%;
+}
+input.image-buscar {
+	width: 12px;
+	border: 0px;
+	position: relative;
+	top:1px;
+    transform:translateX(30px);
+}
+input.image-voice {
+	width: 25px;
+	border: 0px;
+	position: relative;
+	top:1px;
+    transform:translateX(-40px);
+}
+.div-botones{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 .botones{
-    display: flex;
-
+    font-size: 15px;
+    border: none;
+    margin: 5px;
+    padding: 10px;
 }
