--- a/googleclone/sources/styles.css
+++ b/googleclone/sources/styles.css
@@ -95,3 +95,27 @@ input.image-voice {
     padding: 10px;
     margin: 20px;
 }
+.div-footer{
+    display: flex;
+    flex-direction: row;
+    
+    padding: 20px;
+    justify-content: space-evenly;
+    background-color: blue;
+}
+.nav-footer-derecha{
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    padding: 5px;
+    text-align: left;
+    background-color: rgb(255, 102, 0);
+}
+.nav-footer-izquierda{
+    display: flex;
+    justify-content: right;
+    flex-direction: row;
+    padding: 5px;
+    text-align: right;
+    background-color: aqua;
+}
