--- a/googleclone/sources/styles.css
+++ b/googleclone/sources/styles.css
@@ -78,6 +78,11 @@ input.image-voice {
 	top:1px;
     transform:translateX(-40px);
 }
+footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+}
 .div-botones{
     display: flex;
     flex-direction: row;
@@ -97,25 +102,21 @@ input.image-voice {
 }
 .div-footer{
     display: flex;
-    flex-direction: row;
-    
-    padding: 20px;
+    flex-direction:row;    
+    padding-inline: 20px;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: blue;
+    
+}
+.nav-footer-izquierda{    
+    flex-basis: fit-content;    
+    padding: 5px;    
+    margin-right: auto;
 }
 .nav-footer-derecha{
-    display: flex;
-    justify-content: left;
-    flex-direction: row;
-    padding: 5px;
-    text-align: left;
-    background-color: rgb(255, 102, 0);
-}
-.nav-footer-izquierda{
-    display: flex;
-    justify-content: right;
-    flex-direction: row;
-    padding: 5px;
-    text-align: right;
-    background-color: aqua;
+    flex-basis: fit-content;
+    padding: 5px;    
 }
