--- a/header/styles.css
+++ b/header/styles.css
@@ -5,6 +5,10 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
 }
+img{
+    width: 200px;
+    position: fixed;
+}
 a{
     color: white;
     text-decoration: none;   
@@ -21,10 +25,18 @@ ul, li{
     justify-content: space-between;
     align-items: center;
 }
+
 .logo{
-    width: 200px;
+    display: flex;    
+    order: 1;
+    align-items: center;
+    /*-ms-flex-order: initial;*/
 }
 .menu{
+    display: flex;    
+    order: 2;  
+}
+.menu-items{
     display: flex;
     gap: 40px;
     padding: 0;
@@ -34,4 +46,5 @@ ul, li{
     background: linear-gradient(90deg, rgba(140,48,245,1) 0%, rgba(242,43,178,1) 50%, rgba(254,154,34,1) 100%);
     padding: 10px 36px;
     border-radius: 40px 0 40px 0;
+    order: 3;
 }
