--- a/header/header_menus/styles.css
+++ b/header/header_menus/styles.css
@@ -61,10 +61,11 @@ a{
     justify-content: flex-end;
 }
 
-/* .submenu-container{
-    /* display: inline-block; */
-    /* position: relative; 
-} */
+.submenu-container{
+    display: inline-block;
+    position: relative; 
+}
+ 
 .submenu{
     display: flex;
     gap: 10px;
@@ -75,6 +76,7 @@ a{
     padding: 10px;
     background-color: #95a;    
     position: absolute;
+    box-shadow: 1px 0px 7px 0px black;
     top: 50px;
     left: 0px;
 }
